tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.diagnostic
diagnostic error code=O0001 family=ownership message="cannot assign to borrowed binding 'number'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" bytes=157
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" line=8 column=3 end_line=8 end_column=9 byte_start=117 byte_end=123 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari:8:3\n   |\n 8 |   number = 8;\n   |   ^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari" line=6 column=7 end_line=6 end_column=13 byte_start=76 byte_end=82 message="borrowed binding 'number' was declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-assignment-while-borrowed.ari:6:7\n   |\n 6 |   var number = 7;\n   |       ^^^^^^"
  Note index=0 location=none message="borrow state is tracked for each binding and overlapping aggregate field"
  Help index=0 location=none message="end the active borrow of 'number' before trying to assign to"
